# Remy

./: .env.template  .gitignore  ARCHITECTURE.md  CLAUDE.md  DESIGN_BRIEF.md  PRD.md  README.md  V2_PLAN.md  VERIFICATION.md  docker-compose.yml  remy_spec.md  remy_tasks.md  tasks.md
.claude/: launch.json
design/: README.md  remy-v2-design.html
design/src/: remy-app-source.html
legacy/: PLAN.md  docker-compose.yml  pyproject.toml  verify_tools.py
legacy/services/kroger-mcp/: Dockerfile  pyproject.toml
legacy/services/kroger-mcp/src/kroger_mcp/: cli.py
legacy/services/kroger-mcp/src/kroger_mcp/tools/: info_tools.py  utility_tools.py
legacy/services/mealie-mcp-server/: pyproject.toml
legacy/services/mealie-mcp-server/src/: prompts.py  utils.py
legacy/services/mealie-mcp-server/src/models/: mealplan.py  recipe.py
legacy/services/mealie-mcp-server/src/tools/: mealplan_tools.py
legacy/services/remy-agent/: README.md  pyproject.toml  recipe_sources.yaml
legacy/services/remy-agent/tests/: test_live.py
legacy/services/remy-api/: README.md  pyproject.toml
legacy/services/remy-api/src/remy_api/: __init__.py  config.py  crypto.py  main.py  models.py
legacy/services/remy-api/src/remy_api/routers/: cart.py  users.py
legacy/services/remy-web/: package-lock.json
legacy/services/remy-web/src/: App.tsx
legacy/services/remy-web/src/api/: client.ts
legacy/services/remy-web/src/pages/: Settings.tsx
legacy/services/remy-web/src/types/: api.ts
searxng/: settings.yml
services/kroger-mcp/: Dockerfile  docker_entrypoint.py  run_server.py  server.py
services/kroger-mcp/src/kroger_mcp/: prompts.py  server.py
services/kroger-mcp/src/kroger_mcp/tools/: auth.py  auth_tools.py  cart_tools.py  location_tools.py  product_tools.py  profile_tools.py  shared.py
services/mealie-mcp-server/: Dockerfile  docker_entrypoint.py
services/mealie-mcp-server/src/: inspect_mcp.py  server.py
services/mealie-mcp-server/src/mealie/: client.py  group.py  mealplan.py  recipe.py  user.py
services/mealie-mcp-server/src/tools/: __init__.py  mealplan_tools.py  recipe_tools.py
services/remy-agent/: Dockerfile  pantry.yaml  pyproject.toml  user_settings.yaml.template
services/remy-agent/src/remy_agent/: app.py  graph.py  nodes.py  state.py  utils.py
services/remy-agent/tests/: __init__.py  conftest.py  test_graph.py  test_integration.py  test_nodes.py  test_utils.py
services/remy-api/: Dockerfile  README.md  pyproject.toml
services/remy-api/data/: remy.db
services/remy-api/scripts/: kroger_live_test.py
services/remy-api/src/remy_api/: __init__.py  __main__.py  auth.py  config.py  crypto.py  database.py  db.py  deps.py  errors.py  main.py  memory.py  models.py  net.py  rate_limit.py  schemas.py  security.py  seed.py  user_service.py
services/remy-api/src/remy_api/kroger/: __init__.py  banners.py  client.py  errors.py  fastapi_errors.py  models.py  service.py
services/remy-api/src/remy_api/llm/: __init__.py  client.py  errors.py  prompt.py  registry.py
services/remy-api/src/remy_api/mcp_facade/: __init__.py  auth.py  context.py  serialize.py  tools.py
services/remy-api/src/remy_api/observability/: __init__.py  context.py  langfuse.py
services/remy-api/src/remy_api/planner/: __init__.py  consolidation.py  deps.py  discover.py  execute.py  listing.py  machine.py  matching.py  schemas.py  select_step.py  substitution.py
services/remy-api/src/remy_api/prompts/: __init__.py  base.py  ingredient_parsing.py  listicle_filter.py  meal_extraction.py  product_extraction.py  product_ranking.py  receipt_items.py  recipe_extraction.py  recipe_from_images.py  rules.py  saved_recipe_relevance.py
services/remy-api/src/remy_api/providers/: __init__.py  settings.py
services/remy-api/src/remy_api/recipes/: __init__.py  documents.py  images.py  llm_fallback.py  mealie_import.py  schemas.py  scraper.py  store.py
services/remy-api/src/remy_api/routers/: admin.py  auth.py  cart.py  kroger.py  orders.py  plan.py  recipes.py  users.py  usuals.py
services/remy-api/src/remy_api/search/: __init__.py  base.py  brave.py  factory.py  llm_provider.py  searxng.py  thumbnails.py
services/remy-api/src/remy_api/services/: langgraph.py  mcp_client.py
services/remy-api/tests/: conftest.py  test_admin.py  test_auth_settings.py  test_banners.py  test_config.py  test_crypto.py  test_health.py  test_invitations.py  test_kroger.py  test_llm_client.py  test_mcp_facade.py  test_mealie_import.py  test_memory.py  test_oauth_state.py  test_observability.py  test_orders_router.py  test_planner_consolidation.py  test_planner_flow.py  test_planner_substitution.py  test_planner_usuals.py  test_prompts_render.py  test_recipes_documents.py  test_recipes_images.py  test_recipes_router.py  test_recipes_scraper.py  test_recipes_store.py  test_search.py  test_thumbnails.py  test_usuals_router.py
services/remy-api/tests/fixtures/recipes/: clean_schema_hummus.html  clean_schema_tacos.html  messy_no_schema.html
services/remy-api/tests/prompts/: conftest.py  test_prompt_evals.py
services/remy-api/tests/prompts/fixtures/: ingredient_lines.json  kroger_products.json  search_results.json
services/remy-web/: Dockerfile  index.html  nginx.conf  package-lock.json  package.json  tailwind.config.js
services/remy-web/src/: App.tsx  index.css  main.tsx
services/remy-web/src/api/: client.ts
services/remy-web/src/components/: AppShell.tsx  Layout.tsx  RatIcon.tsx  ui.tsx
services/remy-web/src/lib/: api.ts  format.ts  queries.ts  types.ts
services/remy-web/src/pages/: Cart.tsx  Home.tsx  Login.tsx  NotFound.tsx  Register.tsx  Settings.tsx
services/remy-web/src/screens/: CartRecord.tsx  Cookbook.tsx  Join.tsx  Login.tsx  NotFound.tsx  RecipeDetail.tsx  Settings.tsx  Stub.tsx
services/remy-web/src/screens/plan/: PlanFlow.tsx  Step0Input.tsx  Step1Pick.tsx  Step2List.tsx  Step3Cart.tsx  Step4Done.tsx
services/remy-web/src/screens/settings/: UsualsSettings.tsx
services/remy-web/src/store/: auth.ts
services/remy-web/src/stores/: auth.ts  toast.ts
