[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "remy-agent"
version = "0.1.0"
description = "LangGraph agent for Remy"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "langgraph",
    "langchain-core",
    "langchain-openai",
    "langchain-community",
    "ddgs",
    "aiosqlite",
    "langgraph-checkpoint-sqlite",
    "pydantic",
    "python-dotenv",
    "streamlit",
    "httpx",
    "mcp"
]

[project.optional-dependencies]
test = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-mock>=3.12.0",
    "pytest-cov>=4.1.0",
]

[project.scripts]
remy-agent = "remy_agent.main:main"

[tool.hatch.build.targets.wheel]
packages = ["src/remy_agent"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
pythonpath = ["src"]
addopts = "-v --tb=short"

[tool.coverage.run]
source = ["src/remy_agent"]
omit = ["*/tests/*", "*/__pycache__/*"]
