[project]
name = "remy-api"
version = "0.2.0"
description = "FastAPI backend for Remy v2 - self-hosted AI grocery agent"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0,<1.0.0",
    "uvicorn[standard]>=0.32.0,<1.0.0",
    "pydantic[email]>=2.0.0,<3.0.0",
    "pydantic-settings>=2.0.0,<3.0.0",
    "cryptography>=42.0.0,<45.0.0",
    "sqlalchemy[asyncio]>=2.0.0,<3.0.0",
    "aiosqlite>=0.20.0,<1.0.0",
    "pyjwt>=2.9.0,<3.0.0",
    "argon2-cffi>=23.1.0,<24.0.0",
    "pyyaml>=6.0.0,<7.0.0",
    "httpx>=0.27.0,<1.0.0",
    "recipe-scrapers>=15.0.0,<16.0.0",
    "pillow>=10.0.0,<12.0.0",
    "beautifulsoup4>=4.12.0,<5.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "httpx>=0.27.0",
    "ruff>=0.6.0",
]

[project.scripts]
remy-api = "remy_api.__main__:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/remy_api"]

[tool.ruff]
target-version = "py312"
line-length = 120

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # Pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
]
ignore = [
    "E501",  # line too long (handled by formatter)
    "B008",  # do not perform function calls in argument defaults
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
pythonpath = ["src"]
addopts = "-v --tb=short"
