[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "remy-agent"
version = "0.1.0"
description = "LangGraph agent for Remy"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "langgraph>=0.2.0,<1.0.0",
    "langchain-core>=0.3.0,<1.0.0",
    "langchain-openai>=0.2.0,<1.0.0",
    "langchain-community>=0.3.0,<1.0.0",
    "ddgs>=6.0.0,<8.0.0",
    "aiosqlite>=0.20.0,<1.0.0",
    "langgraph-checkpoint-sqlite>=2.0.0,<3.0.0",
    "pydantic>=2.0.0,<3.0.0",
    "python-dotenv>=1.0.0,<2.0.0",
    "streamlit>=1.35.0,<2.0.0",
    "httpx>=0.27.0,<1.0.0",
    "mcp>=1.0.0,<2.0.0"
]

[project.optional-dependencies]
test = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-mock>=3.12.0",
    "pytest-cov>=4.1.0",
]

# Note: remy-agent is a Streamlit app, run via:
#   streamlit run src/remy_agent/app.py

[tool.hatch.build.targets.wheel]
packages = ["src/remy_agent"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
pythonpath = ["src"]
addopts = "-v --tb=short"

[tool.coverage.run]
source = ["src/remy_agent"]
omit = ["*/tests/*", "*/__pycache__/*"]
